--- a/HotelListingAPI/appsettings.json
+++ b/HotelListingAPI/appsettings.json
@@ -21,7 +21,7 @@
       {
         "Name": "Console",
         "Args": {
-          "serverUrl": "http://localhost:5341"
+          "serverUrl": "https://localhost:5341"
         }
       }
     ]
