--- a/HotelListingAPI/HotelListing.API.csproj
+++ b/HotelListingAPI/HotelListing.API.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
