--- a/HotelListingAPI/HotelListing.API.csproj
+++ b/HotelListingAPI/HotelListing.API.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
