--- a/HotelListing.API/Properties/launchSettings.json
+++ b/HotelListing.API/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "HotelListingAPI": {
+    "HotelListing.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
