--- a/HotelListing.API/appsettings.json
+++ b/HotelListing.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "HotelListingDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HotelListingAPIDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "HotelListingDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HotelListingDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Serilog": {
     "MinimumLevel": {
