Added Login Functionality Initial JWT Configuration

--- a/HotelListing.API/appsettings.json
+++ b/HotelListing.API/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "HotelListingDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HotelListingDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "JwtSettings": {
+    "Issuer": "HotelListingAPI",
+    "Audience": "HotelListingAPIClient",
+    "DurationInMinutes": 10,
+    "Key": "YourSuperSecretKey"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -19,7 +25,8 @@
         }
       },
       {
-        "Name": "Console",
+        "Name": "Seq",
+        "Application": "Hotel Listing API",
         "Args": {
           "serverUrl": "https://localhost:5341"
         }
