--- a/HotelListing.API/appsettings.json
+++ b/HotelListing.API/appsettings.json
@@ -6,7 +6,7 @@
     "Issuer": "HotelListingAPI",
     "Audience": "HotelListingAPIClient",
     "DurationInMinutes": 10,
-    "Key": "YourSuperSecretKey"
+    "Key": "irq292IOZvO/JZN0V=-VA10JP7wTWDqf3lydl!Cubx7rTcm-PA6rv5mS!NDG38uP"
   },
   "Serilog": {
     "MinimumLevel": {
