--- a/HotelListing.API/appsettings.json
+++ b/HotelListing.API/appsettings.json
@@ -28,7 +28,7 @@
         "Name": "Seq",
         "Application": "Hotel Listing API",
         "Args": {
-          "serverUrl": "https://localhost:5341"
+          "serverUrl": "http://localhost:5341"
         }
       }
     ]
